--- a/css/style.css
+++ b/css/style.css
@@ -109,9 +109,53 @@ nav{
     font-family: 'Kaushan Script', cursive;
 }
 
-#sobre p{
+p{
     font-family: 'Poppins', sans-serif;
 }
+
+
+
+
+
+#produtos{
+    display: flex;
+    flex-direction: row;
+    align-items: stretch;
+    justify-content: space-evenly;
+    margin: auto;
+    margin-top: 8vh;
+    box-sizing: border-box;
+    width: 900px;
+    height: 450px;
+    background: #354259DE;
+    border-radius: 20px;
+    padding: 1%;
+    color: #ffffff;
+}
+
+.imagemProduto{
+    height: 200px;
+    display: block;
+    border-radius: 20px;
+}
+
+#produtos div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    box-sizing: border-box;
+    margin: 1%;
+    text-align: center;
+    width: 400px;
+}
+
+#produtos h2{
+    font-size: 18px;
+    text-transform: uppercase;
+    font-family: 'Kaushan Script', cursive;
+}
+
 
 
 
@@ -124,16 +168,14 @@ nav{
     #nav-list{
         display: none;
         position: absolute;
-        top: calc(8vh - 2px) ;
+        top: 8vh;
         right: 0;
         width: 30vw;
         height: 0vh;
-        background: #354259DD;
+        background: #354259;
         flex-direction: column;
         align-items: center;
         justify-content: space-around;
-        border: 2px solid #ECE5C7;
-        border-right: 0;
         border-bottom-left-radius: 20px;
     }
 
@@ -157,6 +199,10 @@ nav{
         width: 90vw;
         height: 70vh;
     } 
+
+    #produtos div{
+        width: 300px;
+    }
 
 }
 
@@ -193,7 +239,29 @@ nav{
         font-size: 15px;
     }
 
-    #textoSobre p{
+    p{
         font-size: 13px;
     }
+
+    .imagemProduto{
+        height: 150px;
+    }
+
+    #produtos{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly;
+        width: 300px;
+        height: 700px;
+    }
+
+    #produtos div{
+        width: 250px;
+    }
+
+    h2{
+        font-size: 15px;
+    }
+
 }
